@@ -2,6 +2,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.*;
+import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -19,12 +20,27 @@ class NetworkScanner {
     record Host(String IP, String MAC, String Name) {}
     public void scanNetwork() {
         try {
+            printOwnInfo();
             NetworkInterface.networkInterfaces()
                     .filter(this::isUsableInterface)
                     .filter(this::hasIPv4Address)
                     .forEach(this::processInterface);
         } catch (SocketException e) {
             throw new RuntimeException("Не получилось прочитать интерфейсы", e);
+        }
+
+    }
+
+    private void printOwnInfo(){
+        try {
+            InetAddress addr = InetAddress.getLocalHost();
+            IO.println("Этот компьютер:");
+            IO.println(getIndent(1) + "Имя: " + addr.getCanonicalHostName());
+            IO.println(getIndent(1) + "IP: " + addr.getHostAddress());
+
+        }
+        catch(UnknownHostException e){
+            throw new RuntimeException("Не удалось вывести информацию об устройстве");
         }
     }
 
@@ -56,59 +72,56 @@ class NetworkScanner {
         IO.println(getIndent(3) + "Имя: " + host.Name);
     }
 
-    public List<Host> getHostsForInterface(InterfaceAddress addr) {
+    private Map<String, String> getArpMapForInterface(InterfaceAddress addr) {
         String targetIp = addr.getAddress().getHostAddress();
-        List<Host> hosts = new ArrayList<>();
-
+        Map<String, String> map = new HashMap<>();
         try {
-            Process process = Runtime.getRuntime().exec("arp -a");
-
-            try (BufferedReader reader = new BufferedReader(
-                    new InputStreamReader(process.getInputStream()))) {
-
-                // Паттерн для строки интерфейса (русский/английский)
-                Pattern interfacePattern = Pattern.compile(
-                        "^(?:Интерфейс|Interface):\\s+(\\d+\\.\\d+\\.\\d+\\.\\d+)");
-                // Паттерн для записи ARP: IP и MAC через дефисы
-                Pattern entryPattern = Pattern.compile(
-                        "\\s*(\\d+\\.\\d+\\.\\d+\\.\\d+)\\s+([0-9a-fA-F]{2}-[0-9a-fA-F]{2}-[0-9a-fA-F]{2}-[0-9a-fA-F]{2}-[0-9a-fA-F]{2}-[0-9a-fA-F]{2})");
-
+            ProcessBuilder pb = new ProcessBuilder("arp", "-a");
+            pb.redirectErrorStream(true);
+            Process process = pb.start();
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+                Pattern interfacePattern = Pattern.compile("^(?:Интерфейс|Interface):\\s+(\\d+\\.\\d+\\.\\d+\\.\\d+)");
+                Pattern entryPattern = Pattern.compile("\\s*(\\d+\\.\\d+\\.\\d+\\.\\d+)\\s+([0-9a-fA-F]{2}-[0-9a-fA-F]{2}-[0-9a-fA-F]{2}-[0-9a-fA-F]{2}-[0-9a-fA-F]{2}-[0-9a-fA-F]{2})");
                 String currentInterface = null;
                 String line;
-
                 while ((line = reader.readLine()) != null) {
                     Matcher interfaceMatcher = interfacePattern.matcher(line);
                     if (interfaceMatcher.find()) {
                         currentInterface = interfaceMatcher.group(1);
                         continue;
                     }
-
                     if (targetIp.equals(currentInterface)) {
                         Matcher entryMatcher = entryPattern.matcher(line);
                         if (entryMatcher.find()) {
                             String ip = entryMatcher.group(1);
                             String mac = entryMatcher.group(2).toUpperCase();
-                            String hostname = getHostname(ip);
-                            hosts.add(new Host(ip, mac, hostname));
+                            map.put(ip, mac);
                         }
                     }
                 }
-
-                // Дожидаемся завершения процесса
                 int exitCode = process.waitFor();
                 if (exitCode != 0) {
-                    System.err.println("Предупреждение: arp -a завершилась с кодом " + exitCode);
+                    throw new RuntimeException("arp -a завершилась с кодом " + exitCode);
                 }
-
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
-                System.err.println("Прервано ожидание процесса arp");
+                throw new RuntimeException("Прервано ожидание процесса arp", e);
             }
-
         } catch (IOException e) {
-            System.err.println("Ошибка при выполнении arp -a: " + e.getMessage());
+            throw new RuntimeException("Ошибка при выполнении arp -a: " + e.getMessage(), e);
         }
+        return map;
+    }
 
+    public List<Host> getHostsForInterface(InterfaceAddress addr) {
+        Map<String, String> arpMap = getArpMapForInterface(addr);
+        List<Host> hosts = new ArrayList<>();
+        for (Map.Entry<String, String> entry : arpMap.entrySet()) {
+            String ip = entry.getKey();
+            String mac = entry.getValue();
+            String hostname = getHostname(ip);
+            hosts.add(new Host(ip, mac, hostname));
+        }
         return hosts;
     }
 
@@ -118,7 +131,7 @@ class NetworkScanner {
     private static String getHostname(String ip) {
         try {
             InetAddress addr = InetAddress.getByName(ip);
-            String hostname = addr.getCanonicalHostName();
+            String hostname = addr.getHostName();
             // Если вернулся IP (не имя), считаем что имени нет
             if (hostname.equals(ip)) {
                 return "N/A";
@@ -139,48 +152,40 @@ class NetworkScanner {
                 (ipBytes[3] & 0xFF);
         int mask = 0xFFFFFFFF << (32 - prefix);
         int network = ipInt & mask;
-        int broadcast = network | (~mask & 0xFFFFFFFF);
+        int broadcast = network | ~mask;
         int start = network + 1;
         int end = broadcast - 1;
-        int threadCount = 500;
+        int threadCount = 50;
         ExecutorService executor = Executors.newFixedThreadPool(threadCount);
-        for (int i = start; i <= end; i++) {
-            final int currentIP = i;
-            executor.submit(() -> {
-                try {
-                    InetAddress target = InetAddress.getByAddress(intToBytes(currentIP));
-                    target.isReachable(200);
-                } catch (IOException _) {
-                }
-            });
-        }
-        executor.shutdown();
         try {
-            if (!executor.awaitTermination(1, TimeUnit.SECONDS)) {
+            for (int i = start; i <= end; i++) {
+                final int currentIP = i;
+                executor.submit(() -> {
+                    try {
+                        InetAddress target = InetAddress.getByAddress(intToBytes(currentIP));
+                        target.isReachable(200);
+                    } catch (IOException ignored) {}
+                });
+            }
+            executor.shutdown();
+            if (!executor.awaitTermination(5, TimeUnit.SECONDS)) {
                 executor.shutdownNow();
             }
-        } catch (InterruptedException _) {
-            executor.shutdownNow();
+        } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
+        } finally {
+            if (!executor.isTerminated()) {
+                executor.shutdownNow();
+            }
         }
     }
 
     @Contract(value = "_ -> new", pure = true)
     private byte @NotNull [] intToBytes(int value) {
-        return new byte[]{
-                (byte) ((value >> 24) & 0xFF),
-                (byte) ((value >> 16) & 0xFF),
-                (byte) ((value >> 8) & 0xFF),
-                (byte) (value & 0xFF)
-        };
-    }
-
-    @Contract(pure = true)
-    private @NotNull String ipIntToAddress(int ip) {
-        return ((ip >> 24) & 0xFF) + "." +
-                ((ip >> 16) & 0xFF) + "." +
-                ((ip >> 8) & 0xFF) + "." +
-                (ip & 0xFF);
+        return ByteBuffer
+                .allocate(4)
+                .putInt(value)
+                .array();
     }
 
     private boolean isUsableInterface(@NotNull NetworkInterface ni) {
@@ -206,67 +211,15 @@ class NetworkScanner {
     }
 
     private @NotNull String getIndent(int n){
-        StringBuilder indent = new StringBuilder();
-        for (int i = 0; i < n; i++)
-            indent.append(INDENT);
-        return indent.toString();
+        return INDENT.repeat(Math.max(n, 0));
     }
 
-    private @NotNull String getMAC(byte @NotNull [] addr){
-        StringBuilder mac = new StringBuilder();
-        for (int i = 0; i < addr.length - 1; i++)
-            mac.append(String.format("%02X.", addr[i] & 0xFF));
-        mac.append(String.format("%02X", addr[addr.length - 1]));
+    private @NotNull String getMAC(byte @NotNull [] addr) {
+        StringBuilder mac = new StringBuilder(String.format("%02X", (int) addr[0]));
+        for (int i = 1; i < addr.length; i++) {
+            mac.append(String.format("-%02X", addr[i] & 0xFF));
+        }
         return mac.toString();
     }
 
-    public static Map<String, String> getArpTable(InterfaceAddress addr) {
-        String targetIp = addr.getAddress().getHostAddress();
-        Map<String, String> result = new HashMap<>();
-        try {
-            final Process process = Runtime.getRuntime().exec("arp -a");
-
-            try (BufferedReader reader = new BufferedReader(
-                    new InputStreamReader(process.getInputStream()))) {
-
-                Pattern interfacePattern = Pattern.compile(
-                        "^(?:Интерфейс|Interface):\\s+(\\d+\\.\\d+\\.\\d+\\.\\d+)");
-                Pattern entryPattern = Pattern.compile(
-                        "\\s*(\\d+\\.\\d+\\.\\d+\\.\\d+)\\s+([0-9a-fA-F]{2}-[0-9a-fA-F]{2}-[0-9a-fA-F]{2}-[0-9a-fA-F]{2}-[0-9a-fA-F]{2}-[0-9a-fA-F]{2})");
-
-                String currentInterface = null;
-                String line;
-
-                while ((line = reader.readLine()) != null) {
-                    Matcher interfaceMatcher = interfacePattern.matcher(line);
-                    if (interfaceMatcher.find()) {
-                        currentInterface = interfaceMatcher.group(1);
-                        continue;
-                    }
-
-                    if (targetIp.equals(currentInterface)) {
-                        Matcher entryMatcher = entryPattern.matcher(line);
-                        if (entryMatcher.find()) {
-                            String ip = entryMatcher.group(1);
-                            String mac = entryMatcher.group(2).toUpperCase();
-                            result.put(ip, mac);
-                        }
-                    }
-                }
-
-                final int exitCode = process.waitFor();
-                if (exitCode != 0) {
-                    throw new RuntimeException("Вызов arp завершился с кодом " + exitCode);
-                }
-
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt(); // восстанавливаем статус прерывания
-                throw new RuntimeException("Прервано ожидание процесса arp");
-            }
-
-        } catch (IOException e) {
-            throw new RuntimeException("Ошибка чтения arp");
-        }
-        return result;
-    }
 }
